src/shared/ui/Card/styles.module.css
.card {
    transition: all .2s ease-in;
    display: grid;
    grid-template-columns: 1fr 100px;
    row-gap: 4px;
    max-width: 100%;
    padding: 10px 20px;
    word-break: break-all;
    background-color: var(--neutral-100);
    cursor: default;
}

.title {
    overflow: hidden;
    max-height: 1.5rem;
    font-weight: bold;
}

.body {
    grid-column: span 2;
    overflow: hidden;
    max-height: 4rem;
}

.createdAt {
    justify-self: end;
    font-size: 12px;
    color: var(--neutral-600);
}

@media (hover: hover) {
    .card:hover {
        transition: .2s ease-in;
        background-color: var(--neutral-400);
    }
}

